--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -49,7 +49,7 @@
     "print()\n",
     "print(\"1 Hello world\") # octothorpe or hashtag\n",
     "print('1 Hello world') # using single quote\n",
-    "print(\"The gentleman said, '1 Hello world'\") # single quote inside a double quote\n",
+    "# print(\"The gentleman said, '1 Hello world'\") # SKIP single quote inside a double quote\n",
     "\n",
     "\n",
     "# using comma , to print series of stmts \n",
@@ -99,112 +99,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ac15334f-eab8-41b7-b917-fac6bc628c8b",
-   "metadata": {
-    "id": "ac15334f-eab8-41b7-b917-fac6bc628c8b"
-   },
-   "source": [
-    "### seperator between string"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3fcfda61-b646-4455-9f53-d4bb33f396cd",
-   "metadata": {
-    "id": "3fcfda61-b646-4455-9f53-d4bb33f396cd",
-    "outputId": "22c8c9a7-9cbb-4a1e-a51b-183d162a5403"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. How are you? I am doing good.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello.\", \"How are you?\", \"I am doing good.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0192fb41-78cb-4e9f-b3d4-a4f1b56ee55c",
-   "metadata": {
-    "id": "0192fb41-78cb-4e9f-b3d4-a4f1b56ee55c",
-    "outputId": "bf93e1f3-8864-490e-bdea-0d1b59134f35"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello...how are you?...I am doing good.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# use sep to insert seperator between strings: \\t \\n\n",
-    "print(\"Hello\", \"how are you?\", \"I am doing good.\", sep=\"...\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdf47f68-e5ae-4ce3-9ed2-d8de5f6eddff",
-   "metadata": {},
-   "source": [
-    "# endline between print statememt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "83e0055a-6f19-4c56-aaba-0f42d2ec91ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello.\n",
-      "How are you?\n",
-      "I am doing good.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Now I want to override the default end line char \\n\n",
-    "print(\"Hello.\")\n",
-    "print(\"How are you?\")\n",
-    "print(\"I am doing good.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7da3f4b4-d729-444d-ba6e-f785b326d840",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. How are you? I am doing good. "
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello.\", end=\" \") # other options: ; \\t ,\n",
-    "print(\"How are you?\", end=\" \")\n",
-    "print(\"I am doing good.\", end=\" \")\n",
-    "\n",
-    "# print(\"Hello.\", end=\";\") # DEFAULT is end is newline \\n\n",
-    "# print(\"How are you?\", end=\";\")\n",
-    "# print(\"I am doing good.\", end=\";\")\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -258,6 +158,8 @@
     }
    ],
    "source": [
+    "# Lets say you are getting data from some other source in form of variables. Lets print it.\n",
+    "\n",
     "# style 1) Printing Multiple Values\n",
     "person  = \"Alice\"    # person is a str variable with value Alice, \n",
     "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
@@ -272,11 +174,8 @@
     "\n",
     "# print(person, brother)\n",
     "# print(person, brother, age, wt)\n",
-    "# print(\"person, brother, age, wt\")\n",
-    "# print(person, brother, \"age\", wt)\n",
-    "# print(person, brother, age, wt, sep=\";\")\n",
-    "\n",
-    "\n",
+    "# print(\"person\", brother, \"age\", wt)\n",
+    "# print(\"Hello. My name is\", person)\n",
     "\n",
     "# Lets print a meaningful statement\n",
     "print(\"Hello. My name is\", person, \". My brothers name is\", brother, \". My age is\", age, \". My weight is\", wt)"
@@ -303,7 +202,7 @@
     }
    ],
    "source": [
-    "# style 2) Printing Multiple Values: formatting string\n",
+    "# style 2) Printing Multiple Values: formatting string (f-string)\n",
     "person  = \"Alice\"    # name is a str variable with value Alice, \n",
     "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
     "age     = 10         # age is a int variable with value 10\n",
@@ -331,7 +230,7 @@
     }
    ],
    "source": [
-    "# Lets print above by introducing new variable msg\n",
+    "# Lets print above by introducing new variable msg. f-string does not need to be inside print function\n",
     "\n",
     "person  = \"Alice\"    # name is a str variable with value Alice, \n",
     "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
@@ -403,7 +302,8 @@
     "\n",
     "# print(\"############\")\n",
     "# n = 1234567.8912 # represents money,etc\n",
-    "# print(f\"Formatted number with comma: {n:,.2f}\") # formats the number with commas as thousands separators and two decimal places.\n",
+    "# formats the number with commas as thousands separators and two decimal places.\n",
+    "# print(f\"Formatted number with comma: {n:,.2f}\") \n",
     "\n",
     "# print(\"############\")\n",
     "# ratio = 0.857573\n",
@@ -428,14 +328,13 @@
    },
    "source": [
     "### print special characters, aka escape sequence\n",
+    "- **back-slash** is treated differently inside a string\n",
     "- These are used to represent non-printable or reserved characters in strings\n",
     "```\n",
     "Escape Sequence Meaning\tExample\n",
     "\\\\\tBackslash (\\)\t\"C:\\\\Users\\\\file.txt\"\n",
     "\\'\tSingle quote (')\t'It\\'s zenith'\n",
     "\\\"\tDouble quote (\")\t\"He said, \\\"You turned vermillion\\\"\"\n",
-    "\\b\tBackspace\t\"Hello\\b\" → \"Hell\"\n",
-    "\\r\tCarriage return\t\"Hello\\rWorld\" → World\n",
     "\\n  Newline\n",
     "\\t  tab\n",
     "\n",
@@ -469,13 +368,25 @@
     "print(\"HelloWorld!\")\n",
     "# print(\"Hello\\nWorld!\") # newline \\n\n",
     "# print(\"Hello World\\nGood Morning. \\n Hope you had good sleep\")  # Newline \\n\n",
+    "\n",
     "# print(\"#############################\")\n",
     "# print(\"How     are     you     Rahim!\")  # Tab \\t\n",
     "# print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t\n",
     "# print(\"Hello\\tWorld! This is my \\tfirst example \\tof tab\")  # Tab\n",
-    "# print(\"#############################\")\n",
     "\n",
-    "# print(\"Hello\\rWorld!\")# carriage return \\r"
+    "#########################################\n",
+    "# printing \\ inside a \"\"\n",
+    "# print(\"The path of file is C:\\Users\\file.txt\") # Throws error\n",
+    "# print(\"\"\"The path of file is C:\\Users\\file.txt\"\"\") # Throws error\n",
+    "print(\"The path of file is C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt\n",
+    "\n",
+    "######################################\n",
+    "# printing ' inside a ''\n",
+    "# print('It's a zenith') # Throws error\n",
+    "# print('It\\'s a zenith') # It's a zenith\n",
+    "\n",
+    "# printing \" inside a \"\"\n",
+    "print(\"He said, \\\"My sister put vermillion tika on my forehead\\\"\")\n"
    ]
   },
   {
@@ -494,21 +405,12 @@
     }
    ],
    "source": [
-    "# printing \\ inside a \"\"\n",
-    "# print(\"The path of file is C:\\Users\\file.txt\") # Throws error\n",
-    "# print(\"\"\"The path of file is C:\\Users\\file.txt\"\"\") # Throws error\n",
-    "print(\"The path of file is C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt\n",
     "\n",
     "\n",
-    "# printing ' inside a ''\n",
-    "# print('It's a zenith') # Throws error\n",
-    "# print('It\\'s a zenith') # It's a zenith\n",
-    "# print('It is\\b a zenith')\n",
     "\n",
-    "# printing \" inside a \"\"\n",
-    "print(\"He said, \\\"My sister put vermillion tika on my forehead\\\"\")\n",
+    "# #OPTIONAL#############################\n",
+    "# # print('It is\\b a zenith')\n",
     "\n",
-    "# #OPTIONAL\n",
     "# # print(\"\\a\")\n",
     "# # print(\"His astute candor disarmed latent hostilities\\b\") # His astute candor disarmed latent hostilitie\n",
     "# # print(\"Her tenacity ignited\\r profound, serendipitous triumphs\") # profound, serendipitous triumphs\n"
@@ -517,7 +419,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62eb13ce-2334-4347-9527-af7e8b30128b",
+   "id": "f7b26e4a-6556-439e-b66f-153e250fc117",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9133ee3f-04a1-4e38-ac00-88f9d70d337d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "470ad348-87e1-416a-9e50-22de868cad63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b48a591-73c2-4753-8fa6-6dfc838a43d5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd19e002-529a-4ed0-8fd5-1433835a260a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a781279-3fba-4e52-9c85-cba40a72c9c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7132940-3321-4670-91ae-b02c7e49e98d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -566,6 +512,53 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0af087e-0a3c-485e-82cb-aea476ab3afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### (OPTIONAL) Seperator between string\n",
+    "print(\"Hello.\", \"How are you?\", \"I am doing good.\")\n",
+    "\n",
+    "# use sep to insert seperator between strings: \\t \\n\n",
+    "print(\"Hello\", \"how are you?\", \"I am doing good.\", sep=\"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "849b27cf-18aa-45b7-a8a8-720afb5af0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28dbac1-627c-4c1b-a1ae-ac70b6c52dca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (OPTIONAL)  endline between print statememt\n",
+    "\n",
+    "# Now I want to override the default end line char \\n\n",
+    "print(\"Hello.\")\n",
+    "print(\"How are you?\")\n",
+    "print(\"I am doing good.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Hello.\", end=\" \") # other options: ; \\t ,\n",
+    "print(\"How are you?\", end=\" \")\n",
+    "print(\"I am doing good.\", end=\" \")\n",
+    "\n",
+    "# print(\"Hello.\", end=\";\") # DEFAULT is end is newline \\n\n",
+    "# print(\"How are you?\", end=\";\")\n",
+    "# print(\"I am doing good.\", end=\";\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f4eaf0-9454-40e1-930a-932b7a465ee9",
    "metadata": {},
    "outputs": [],
    "source": []
