--- a/tut_py_2_type_part1_0_numeric_datatype_typecasting.ipynb
+++ b/tut_py_2_type_part1_0_numeric_datatype_typecasting.ipynb
@@ -35,10 +35,11 @@
     "a = 10\n",
     "b = 3\n",
     "c = 1.2\n",
-    "d = 1+2j\n",
+    "d = 1 + 2j\n",
     "\n",
     "print(type(a))\n",
     "\n",
+    "# Lets print above using f-string\n",
     "print(f\"type of a is {type(a)}\")\n",
     "print(f\"type of b is {type(b)}\")\n",
     "print(f\"type of c is {type(c)}\")\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e4f14afc-4aa4-463b-9b8d-d7b5d5b6dbda",
    "metadata": {},
    "outputs": [
@@ -63,19 +64,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "addition:13\n",
-      "subtraction: 7\n",
-      "muptiplication:30\n",
-      "3.3333333333333335\n",
+      "addition:22\n",
+      "subtraction: 12\n",
+      "multiplication:85\n",
+      "3.4\n",
       "3\n",
-      "1\n",
-      "1000\n"
+      "2\n",
+      "1419857\n"
      ]
     }
    ],
    "source": [
-    "a = 10 # apple\n",
-    "b = 3 \n",
+    "a = 17 # apple\n",
+    "b = 5 \n",
     "\n",
     "res = a + b\n",
     "print(f\"addition:{res}\")   # Addition → 13\n",
@@ -165,7 +166,7 @@
     "print(c1 - c2)   # Subtraction → (2+2j)\n",
     "print(c1 * c2)   # Multiplication → (-5+10j)\n",
     "print(c1 / c2)   # Division → (2.2-0.4j)\n",
-    "print(abs(c1))   # Magnitude (modulus) → 5.0\n"
+    "print(abs(c1))   # Magnitude (modulus) → 5.0"
    ]
   },
   {
@@ -199,10 +200,40 @@
     "# print(x / 10) # ERROR\n",
     "\n",
     "\n",
-    "# step2: now convert into int\n",
+    "# step2: now convert str into int\n",
     "x = int(x) # or float(x)\n",
     "print(type(x))\n",
-    "print(x / 10) \n"
+    "print(x / 10) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c4d3b5-63ae-46ad-bec9-39597faebd5b",
+   "metadata": {},
+   "source": [
+    "# convert float to int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aacdb27e-4590-4149-84bc-92fd0ba21f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# convert float -> int\n",
+    "x = 10.5 # float\n",
+    "\n",
+    "x = int(x) # covert it into int\n",
+    "print(x)"
    ]
   },
   {
@@ -246,22 +277,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb4190fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5+15j)\n",
+      "<class 'complex'>\n",
+      "(3.5+3j)\n",
+      "<class 'complex'>\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 5      # int\n",
     "num2 = 2.5    # float\n",
     "num3 = 1 + 3j # complex\n",
     "\n",
-    "\n",
-    "print(num2 + num3)   \n",
-    "print(type(num2 + num3))   \n",
-    "\n",
-    "print(num1 * num3)   \n",
+    "print(num1 * num3)   # int * complex -> complex\n",
     "print(type(num1 * num3))\n",
-    "\n"
+    "\n",
+    "print(num2 * num3)  # float * complex -> complex\n",
+    "print(type(num2 + num3))   "
    ]
   },
   {
@@ -275,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
