--- a/tut_py_3_function_0_2_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_2_userDefined_practice.ipynb
@@ -12,21 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, welcome to the Python class!\n",
-      "You are going to enjoy this\n",
-      "################\n",
-      "Hello, welcome to the Python class!\n",
-      "You are going to enjoy this\n",
-      "******************\n",
-      "Hello, welcome to the Python class!\n",
-      "You are going to enjoy this\n",
       "Hello, welcome to the Python class!\n",
       "You are going to enjoy this\n"
      ]
@@ -34,7 +26,7 @@
    ],
    "source": [
     "## 1. Basic Function (No Parameters, No Return)\n",
-    "def greet(): # This function prints a greeting message. (NOT RECOMMENDED)\n",
+    "def greet(): \n",
     "    \"\"\"This function prints a greeting message.\"\"\"\n",
     "    print(\"Hello, welcome to the Python class!\")\n",
     "    print(\"You are going to enjoy this\") \n",
@@ -42,16 +34,16 @@
     "\n",
     "# Call the function\n",
     "greet()\n",
-    "print(\"################\")\n",
-    "greet()\n",
-    "print(\"******************\")\n",
-    "greet()\n",
-    "greet()\n"
+    "# print(\"################\")\n",
+    "# greet()\n",
+    "# print(\"******************\")\n",
+    "# greet()\n",
+    "# greet()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,61 +51,33 @@
      "output_type": "stream",
      "text": [
       "Hello, Rahim! Welcome to the Python class.\n",
-      "Today Rahim, you will learn python\n",
-      "..........Next greet\n",
-      "Hello, Alice! Welcome to the Python class.\n",
-      "Today Alice, you will learn python\n"
+      "Today you will learn python\n",
+      "Hello, Tanwar! Welcome to the Python class.\n",
+      "Today you will learn python\n",
+      "Hello, Zena! Welcome to the Python class.\n",
+      "Today you will learn python\n"
      ]
     }
    ],
    "source": [
     "# 2. Function with Parameters, no return values\n",
     "def greet_person(name):\n",
-    "    \"\"\"This function greets a person by name.\"\"\"\n",
-    "    print(f\"Hello, {name}! Welcome to the Python class.\")\n",
-    "    print(f\"Today {name}, you will learn python\")\n",
-    "    \n",
-    "\n",
-    "# Call the function with an argument\n",
-    "greet_person(\"Rahim\")\n",
-    "print(\"..........Next greet\")\n",
-    "greet_person(\"Alice\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, Alice! Welcome to the Python class.\n",
-      "Today you will learn python\n",
-      "Hello, Bharti! Welcome to the Python class.\n",
-      "Today you will learn python\n",
-      "Hello, Rishabh! Welcome to the Python class.\n",
-      "Today you will learn python\n"
-     ]
-    }
-   ],
-   "source": [
-    "def greet_person(name):\n",
-    "    \"\"\"This function greets a person by name.\"\"\"\n",
+    "    \"\"\"This function greets a person by name.\n",
+    "       It uses f-string\n",
+    "    \"\"\"\n",
     "    print(f\"Hello, {name}! Welcome to the Python class.\")\n",
     "    print(\"Today you will learn python\")\n",
     "    \n",
     "\n",
     "# Call the function with an argument\n",
-    "greet_person(\"Alice\")\n",
-    "greet_person(\"Bharti\")\n",
-    "greet_person(\"Rishabh\")\n"
+    "greet_person(\"Rahim\")\n",
+    "greet_person(\"Tanwar\")\n",
+    "greet_person(\"Zena\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,9 +96,8 @@
     "    return ans\n",
     "\n",
     "# Store and print the result\n",
-    "# result = add(                5,        3)\n",
     "result = add(5, 3)\n",
-    "print(\"The sum is:\", result)\n"
+    "print(f\"The sum is: {result}\")\n"
    ]
   },
   {
@@ -159,7 +122,7 @@
     }
    ],
    "source": [
-    "# Here user is supplying numbers\n",
+    "# SKIP: Here user is supplying numbers\n",
     "def add_numbers(a, b):\n",
     "    \"\"\"This function returns the sum of two numbers.\"\"\"\n",
     "    ans = a + b\n",
@@ -215,7 +178,7 @@
     }
    ],
    "source": [
-    "# step2) a more professional way\n",
+    "# step2) a more professional way: with error checking and doc string\n",
     "def calculate_simple_interest(principal, rate, time):\n",
     "    \"\"\"Calculates the simple interest earned on a principal amount.\n",
     "\n",
@@ -291,8 +254,7 @@
     "# result = add(3) # here default b is 0\n",
     "# result = add(3,4)\n",
     "\n",
-    "\n",
-    "print(result)\n"
+    "print(result)"
    ]
   },
   {
@@ -323,8 +285,6 @@
     "# Calling the function\n",
     "print(f\"The 3 to the power of 2 is {power(3)}\")      # Uses default exponent 2\n",
     "print(power(3, 4))   # Uses provided exponent 4\n",
-    "print(power(5, 3))   \n",
-    "print(power(125,125))\n",
     "\n",
     "##########################################\n",
     "# e.g.2: professional way of doing above\n",
@@ -374,6 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#SKIP\n",
     "# import sys\n",
     "# sys.set_int_max_str_digits(10000000)\n",
     "# print(f\"high number to the power of high number {power(67123,2456)}\")"
@@ -396,9 +357,6 @@
    "source": [
     "# 5. Function with Multiple Return Values\n",
     "def rectangle_properties(length, width):\n",
-    "    \"\"\"This function returns the area, perimeter and price of a rectangle.\n",
-    "        Multiple return values, tuple unpacking.\n",
-    "    \"\"\"\n",
     "    area = length * width\n",
     "    perimeter = 2 * (length + width)\n",
     "    price = 2000*area\n",
@@ -468,40 +426,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADVANCED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Harsh\n",
+      "{'name': 'Sammy', 'age': 25, 'city': 'New York'}\n",
+      "<class 'dict'>\n",
+      "name: Sammy\n",
       "age: 25\n",
-      "city: New York\n",
-      "name: Cherry\n",
-      "age: 21\n",
-      "city: Hong Kong\n",
-      "name: Shamlodhiya\n",
-      "age: 37\n",
-      "city: Moscow\n"
+      "city: New York\n"
      ]
     }
    ],
    "source": [
-    "# 6. Function Using kwargs (Keyword Arguments) (ADVANCED)\n",
+    "# 6.(ADVANCED) Function Using kwargs (Keyword Arguments) \n",
     "def show_info(**info):\n",
     "    \"\"\"This function takes keyword arguments and prints them.\"\"\"\n",
+    "    print(info)\n",
+    "    print(type(info))\n",
     "    for key, value in info.items():\n",
     "        print(f\"{key}: {value}\")\n",
     "    \n",
     "\n",
     "# Calling with keyword arguments\n",
-    "show_info(name=\"Harsh\",  age=25, city=\"New York\")\n",
-    "show_info(name=\"Cherry\", age=21, city=\"Hong Kong\")\n",
-    "show_info(name=\"Shamlodhiya\", age=37, city=\"Moscow\")\n",
-    "\n",
-    "\n"
+    "show_info(name=\"Sammy\",  age=25, city=\"New York\")\n",
+    "# show_info(name=\"Cherry\", age=21, city=\"Hong Kong\")\n",
+    "# show_info(name=\"Shamlodhiya\", age=37, city=\"Moscow\")"
    ]
   },
   {
@@ -518,7 +507,7 @@
     }
    ],
    "source": [
-    "# 7. Recursive Function (ADVANCED)\n",
+    "# 7.(ADVANCED) Recursive Function: TODO Put this in in seperate notebook\n",
     "def factorial(n):\n",
     "    \"\"\"This function calculates the factorial of a number using recursion.\"\"\"\n",
     "    if n == 0 or n == 1:\n",
