--- a/tut_py_2_type_part2_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_conditional_ifelse.ipynb
@@ -5,7 +5,9 @@
    "id": "05ba9f55-4226-41f1-a7b8-8c82fe190439",
    "metadata": {},
    "source": [
-    "## if - else\n",
+    "## Conditional if-else statement:\n",
+    "Following is the general expression:\n",
+    "\n",
     "```\n",
     "if  [boolean_expression1]:\n",
     "    statements1\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5221b0b0-aea6-4cfc-9e5e-05f6f11cedc8",
    "metadata": {},
    "outputs": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
    "metadata": {},
    "outputs": [
@@ -81,53 +83,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0887b2e3-b4c4-4a2a-997a-5e766f18d0e8",
+   "execution_count": 3,
+   "id": "e33fbaf4-2e4a-41eb-b1d7-0cf9f0585352",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter whats on your mind: 44444\n"
+      "Enter number: 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "Ohh...that's great...44444\n"
+      "Even number\n"
      ]
     }
    ],
    "source": [
-    "# OPTIONAL: ask user for input: TODO\n",
-    "msg = input(\"Please enter whats on your mind:\")\n",
+    "# Example: User enters a number and program display message if number is even or odd\n",
     "\n",
-    "print(type(msg)) # always is string\n",
-    "print(f\"Ohh...that's great...{msg}\")"
+    "num = input(\"Enter number:\")\n",
+    "num = int(num)\n",
+    "\n",
+    "#OR USE\n",
+    "# num = int(input(\"Enter number:\"))\n",
+    "\n",
+    "if num % 2 == 0:\n",
+    "    print(\"Even number\")\n",
+    "else:\n",
+    "    print(\"Odd number\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "70dae8a0-9f62-4cbc-a699-254b73cc844a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter your name:  ash\n",
-      "Enter your age:  120\n"
+      "Enter your age:  34\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hey ash, you are older than 100 years old man.\n"
+      "Hello ash! You are younger than 100 year old man.\n"
      ]
     }
    ],
@@ -149,23 +157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "e1564d31-7736-486e-a83a-41feefcbc336",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter your name:  ash\n",
-      "Enter your age:  26\n"
+      "Enter your age:  33\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello ash! You will turn 100 years old in the year 2099.\n"
+      "Hello ash! You will turn 100 years old in the year 2092.\n"
      ]
     }
    ],
@@ -189,40 +197,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f27b155a-a1c1-4071-9729-6435e0610dfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter number: 56\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Even number\n"
-     ]
-    }
-   ],
-   "source": [
-    "# display message if number is even or odd\n",
-    "# num = 8\n",
-    "\n",
-    "num = int(input(\"Enter number:\"))\n",
-    "# num = int(num)\n",
-    "\n",
-    "if num % 2 == 0:\n",
-    "    print(\"Even number\")\n",
-    "else:\n",
-    "    print(\"Odd number\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "98492e67-7dd9-4a18-b929-a68f2d6f13f0",
    "metadata": {},
@@ -238,7 +212,12 @@
    ],
    "source": [
     "# Students are given grades based on their marks\n",
-    "marks = 56\n",
+    "# [100-90]: A\n",
+    "# [80-90] : B\n",
+    "# [70-80] : C\n",
+    "# [<70]   : F\n",
+    "\n",
+    "marks = 55\n",
     "\n",
     "if marks >= 90:\n",
     "    print(\"Grade: A\")\n",
@@ -251,10 +230,6 @@
     "elif marks >= 70:\n",
     "    print(\"Grade: C\")\n",
     "    print(\"Good work, but you can  do better\")\n",
-    "    \n",
-    "elif marks >= 60:\n",
-    "    print(\"Grade: D\")\n",
-    "    print(\"Buddy whats going on ? I have confidence that u can do better\")\n",
     "    \n",
     "else:\n",
     "    print(\"Grade: F\")\n",
@@ -271,10 +246,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4311c784-1845-4d6e-bd42-90160de4a6e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are eligible for an adult ticket.\n",
+      "######################\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you want to continue? (yes/no):  yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for your response.\n",
+      "######################\n",
+      "Weather normal\n"
+     ]
+    }
+   ],
    "source": [
     "# if with 'or'\n",
     "\n",
@@ -295,7 +295,25 @@
     "    print(\"Thank you for your response.\")\n",
     "else:\n",
     "    print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
-    "\n",
+    "print(\"######################\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4abc7959-cb68-42de-858b-7378397fff82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weather normal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SKIP\n",
     "#e.g.3: design a logic that print weather alert when temp < 32 or > 90\n",
     "temp = 50\n",
     "\n",
@@ -315,10 +333,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2eb4dd39-d4c6-4b1e-88a9-b660490d6641",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Username: ash\n",
+      "Enter password: gdfd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid login\n",
+      "##################\n",
+      "You are eligible for a 20% discount!\n",
+      "Congratulations! You have passed the course.\n"
+     ]
+    }
+   ],
    "source": [
     "# if with 'and'\n",
     "\n",
@@ -342,8 +379,25 @@
     "if membership_status == \"gold\" and purchase_amount > 100:  # Check if both conditions are met\n",
     "    print(\"You are eligible for a 20% discount!\")\n",
     "else:\n",
-    "    print(\"You are not eligible for a discount.\")\n",
-    "\n",
+    "    print(\"You are not eligible for a discount.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9118a41-f84e-4af9-8a0e-5976c3a2a40b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congratulations! You have passed the course.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SKIP\n",
     "#e.g.3: design logic for -> student passes if score > 70 and attendance > 75%\n",
     "exam_score = 78\n",
     "attendance_percentage = 85  # Attendance in percentage\n",
@@ -364,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2951acf7-88cf-4ffd-be4c-df5e3af16256",
    "metadata": {},
    "outputs": [
@@ -372,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are eligible for the scholarship!\n",
+      "U r not eligible for the scolarship\n",
       "####################\n",
       "Access granted to the restricted area.\n"
      ]
@@ -390,8 +444,17 @@
     "else:\n",
     "    print(\"U r not eligible for the scolarship\")\n",
     "\n",
-    "print(\"####################\")\n",
-    "\n",
+    "print(\"####################\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44011d5d-4372-4c32-a064-34dc70f7fd80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SKIP\n",
     "#e.g.2\n",
     "user_role = \"editor\"\n",
     "is_active = True\n",
@@ -412,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3f149afa-c1a2-4a11-ab69-5677e946bf97",
    "metadata": {},
    "outputs": [
@@ -432,12 +495,20 @@
     "if item in shopping_list:\n",
     "    print(f\"{item} is on the list.\")\n",
     "else:\n",
-    "    print(f\"{item} is not on the list.\")\n"
+    "    print(f\"{item} is not on the list.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aa962ef-3cfc-4f4b-b6a6-ae5730123015",
+   "metadata": {},
+   "source": [
+    "# Nested if statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "1c643cc6-4b00-4a32-917c-e319625db19d",
    "metadata": {},
    "outputs": [
@@ -493,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
