--- a/tut_py_2_type_part2_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_conditional_ifelse.ipynb
@@ -178,7 +178,8 @@
     }
    ],
    "source": [
-    "#STEP2: Program to calculate the year user turns 100, with an if-elif-else condition\n",
+    "#STEP2: Lets do some computation: if-elif-else\n",
+    "# Program to calculate the year user turns 100\n",
     "\n",
     "name = input(\"Enter your name: \")\n",
     "age  = input(\"Enter your age: \")\n",
@@ -435,7 +436,7 @@
    "source": [
     "# if with 'and' and 'or'\n",
     "\n",
-    "#e.g.1\n",
+    "#e.g.1: check if (score > 50 and num of extra-curricular activities > 2) or (score > 80)\n",
     "score = 30 \n",
     "extracurr = 2\n",
     "\n",
@@ -540,6 +541,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3dcd4477-25d1-4513-9ebd-e046d54bfdc3",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a44c1490-804d-4413-aac6-c410eb2064ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c822ba0-deef-4d10-9606-5f73400b07c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d10ee3a-314d-4958-a6e0-dce828a43528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXTRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb21e68-d96e-4901-a016-28b7c681566d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXTRA assignement: user enter his DOB and proogram calculates his year when he turn 100\n",
+    "name = input(\"Enter your name: \")\n",
+    "age  = input(\"Enter your DOB (yyyy-mm-dd): \") # 2000-01-23\n",
+    "yyyy = age[:4]\n",
+    "\n",
+    "current_year = 2025\n",
+    "year_of_birth = int(yyyy)\n",
+    "age = current_year - year_of_birth\n",
+    "\n",
+    "if age < 100:\n",
+    "    year_when_100 = current_year + (100 - age)\n",
+    "    print(f\"Hello {name}! You will turn 100 years old in the year {year_when_100}.\")\n",
+    "elif age == 100:\n",
+    "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
+    "else:\n",
+    "    print(f\"Hey {name}, you turned 100 years old {age - 100} years ago.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41d6c1bc-6493-40c1-9653-82dd7088c51d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e74b1228-c4f5-458e-8fb4-ed17c78d7cb9",
@@ -564,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
