--- a/tut_py_2_type_part4_2_set.ipynb
+++ b/tut_py_2_type_part4_2_set.ipynb
@@ -5,7 +5,7 @@
    "id": "503df67f-a6b8-405a-b978-59e8bdefd3e9",
    "metadata": {},
    "source": [
-    "# Sets\n",
+    "# Sets: container for data\n",
     "- not ordered\n",
     "- contains unique elements. No duplicates"
    ]
@@ -40,11 +40,7 @@
     "even = { 8, 4, 10, 2 }\n",
     "print(even) # elements are not printed in the same order in which they were entered\n",
     "print(type(even))\n",
-    "print(\"############\")\n",
-    "\n",
-    "# Sets remove duplicates: lets add duplicates and they are removed\n",
-    "even = {8, 4, 10, 2, 4, 4} \n",
-    "print(even)"
+    "print(\"############\")"
    ]
   },
   {
@@ -74,12 +70,12 @@
     "t = (\"mars\", \"jupyter\", \"saturn\") # a tuple\n",
     "\n",
     "planets = set(t) # on tuple\n",
-    "print(planets)  \n"
+    "print(planets)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "130222ed-2434-4a9b-a41a-577ebf8572f8",
    "metadata": {},
    "outputs": [
@@ -87,15 +83,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{8, 10, 2, 4}\n",
       "{'user2@example.com', 'user1@example.com'}\n"
      ]
     }
    ],
    "source": [
+    "# Sets remove duplicates: lets add duplicates and set() will remove them\n",
+    "even = {8, 4, 10, 2, 4, 4} \n",
+    "print(even)\n",
+    "\n",
+    "###################\n",
     "# A simple but useful application of set:  You have list of items that contain some duplicate entries. Remove them using set.\n",
     "\n",
     "emails = [\"user1@example.com\", \"user2@example.com\", \"user1@example.com\", \"user1@example.com\"]\n",
-    "unique_emails = {emails}\n",
+    "unique_emails = set(emails)\n",
     "\n",
     "print(unique_emails)\n"
    ]
@@ -149,12 +151,14 @@
     }
    ],
    "source": [
+    "# add and remove elements\n",
+    "\n",
     "guests = {\"Sarah\", \"Wurtzberger\", \"Charlie\"}\n",
     "\n",
     "guests.add(\"David\")  # Add a guest\n",
     "print(guests)\n",
     "\n",
-    "\n",
+    "##############\n",
     "guests.remove(\"Charlie\")  # Remove a guest\n",
     "print(guests)\n"
    ]
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "13961d73-f817-4013-a681-dc7489c01c74",
    "metadata": {},
    "outputs": [
@@ -178,28 +182,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'David', 'Geeta', 'Alice', 'Bob', 'Zena', 'Charlie'}\n",
-      "{'Zena', 'Bob'}\n",
-      "{'Alice', 'Charlie'}\n",
-      "{'David', 'Geeta'}\n"
+      "union       : {'Alice', 'Geeta', 'David', 'Bob', 'Charlie', 'Zena'}\n",
+      "intersection: {'Bob', 'Zena'}\n",
+      "difference1 : {'Alice', 'Charlie'}\n",
+      "difference2 : {'Geeta', 'David'}\n"
      ]
     }
    ],
    "source": [
-    "class_A = {\"Alice\", \"Bob\", \"Charlie\", \"Zena\"}\n",
-    "class_B = {\"Bob\", \"David\", \"Zena\", \"Geeta\"}\n",
+    "# Union, Intersection, Difference\n",
+    "\n",
+    "class_art = {\"Alice\", \"Bob\", \"Charlie\", \"Zena\"}\n",
+    "class_gym = {\"Bob\", \"David\", \"Zena\", \"Geeta\"}\n",
     "\n",
     "# Union (All students)\n",
-    "print(class_A | class_B)  \n",
+    "print(\"union       :\", class_art | class_gym)  \n",
     "\n",
     "# Intersection (Students in both classes)\n",
-    "print(class_A & class_B)  \n",
+    "print(\"intersection:\", class_art & class_gym)  \n",
     "\n",
-    "# Difference (Students only in class A)\n",
-    "print(class_A - class_B)\n",
+    "# Difference (Students only in class art and not in gym class)\n",
+    "print(\"difference1 :\", class_art - class_gym)\n",
     "\n",
-    "# Difference (Students only in class B)\n",
-    "print(class_B - class_A)  "
+    "# Difference (Students only in class gym and not in art class)\n",
+    "print(\"difference2 :\", class_gym - class_art)  "
    ]
   },
   {
@@ -226,9 +232,10 @@
     }
    ],
    "source": [
+    "# Checking if an element exists in a set.\n",
     "word_set = {\"python\", \"java\", \"c++\", \"javascript\"}\n",
     "\n",
-    "srch = 'python5555'\n",
+    "srch = 'python'\n",
     "if srch in word_set:\n",
     "    print(f\"{srch} is in the set.\")\n",
     "else:\n",
@@ -252,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
