--- a/tut_py_2_type_part3_1_loop_for_range_while_break_continue1THEORY.ipynb
+++ b/tut_py_2_type_part3_1_loop_for_range_while_break_continue1THEORY.ipynb
@@ -86,15 +86,7 @@
    ],
    "source": [
     "# where does the for loop ends: thats decided by indentation\n",
-    "# STEP1: \n",
-    "for i in [0,1,2,3]:\n",
-    "    print(\"hello\")\n",
-    "    print(\"I am trapped in for loop\") \n",
-    "    print(\"Finished\")\n",
     "\n",
-    "print(\"###############\")\n",
-    "\n",
-    "# STEP2: Move last stmt out of for loop\n",
     "for i in [0,1,2,3]:\n",
     "    print(\"hello\")\n",
     "    print(\"I am trapped in for loop\") \n",
@@ -349,11 +341,7 @@
     "\n",
     "```\n",
     "while [boolean_expression]:\n",
-    "    stmt1\n",
-    "    stmt2\n",
-    "    .\n",
-    "    .\n",
-    "    stmtn\n",
+    "   # block_of_code\n",
     "```\n",
     "\n",
     "**NOTE: In for loop we are encoding the iterator value**"
@@ -385,7 +373,7 @@
     "i = 1\n",
     "while i <= 5:\n",
     "    print(i)\n",
-    "    i += 1  # Increment i\n",
+    "    i += 1  # Increment i by 1\n",
     "print(\"#################\")\n"
    ]
   },
@@ -431,7 +419,7 @@
     "num = 2\n",
     "while num <= 10:\n",
     "    print(num)\n",
-    "    num += 2\n",
+    "    num += 2 # increment num by 2\n",
     "\n",
     "print(\"Done\")\n",
     "print(\"##############\")\n",
@@ -439,7 +427,7 @@
     "#style2\n",
     "num = 0\n",
     "while num < 10:\n",
-    "    num += 1\n",
+    "    num += 1          # increment num by 1\n",
     "    if num % 2 == 0:  # Check if the number is even\n",
     "        print(num)    \n",
     "\n",
@@ -510,7 +498,7 @@
     "while i <= 6:\n",
     "    if i == 4:\n",
     "        print(\"Stopping at 4\")\n",
-    "        break  # Exit the loop\n",
+    "        break  # Exit/break out of the loop\n",
     "    print(i)\n",
     "    i += 1\n",
     "print(\"##############\")"
@@ -527,7 +515,7 @@
     "\n",
     "#infinite loop\n",
     "# i = 1\n",
-    "# while i>0:\n",
+    "# while i > 0:\n",
     "#     print(\"hello\")\n",
     "#     i += 2\n",
     "    \n",
@@ -732,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
