--- a/tut_py_2_type_part4_1_dict.ipynb
+++ b/tut_py_2_type_part4_1_dict.ipynb
@@ -5,16 +5,20 @@
    "id": "accbac1e-d592-4a95-a295-88ed9e7d093c",
    "metadata": {},
    "source": [
-    "## Mapping Type\n",
-    "dict contains elements of type Key : value pairs.\n",
+    "## Dictionary: Mapping Type container\n",
+    "dict contains elements of type **key : value** pairs.\n",
+    "- General expression for dictionary:\n",
     "```\n",
-    "d = {\"a\": 1,\n",
-    "     \"b\": 2,\n",
-    "     \"c\": 4\n",
+    "d = {\n",
+    "     key1: value1,\n",
+    "     key2: value2,\n",
+    "     key3: value3,\n",
     "}\n",
     "```\n",
     "\n",
-    "- dict are mutable"
+    "- dict are **mutable**\n",
+    "- **keys** can be string, int, float.\n",
+    "- **values** can be any data type: int, str, bool, dict, list, tuples, etc "
    ]
   },
   {
@@ -43,18 +47,27 @@
    ],
    "source": [
     "# creating dict: style1\n",
-    "student_scores = {\"Ram\": 85, \n",
-    "                  \"Carlos\": 92, \n",
-    "                  \"Roman\": 78\n",
+    "student_scores = {\n",
+    "    \"Ram\": 85, \n",
+    "    \"Carlos\": 92, \n",
+    "    \"Roman\": 78\n",
     "}\n",
     "\n",
     "print(student_scores)\n",
-    "print(type(student_scores))"
+    "print(type(student_scores))\n",
+    "\n",
+    "####################\n",
+    "# Side note: I can rewrite above like this too:\n",
+    "student_scores = { \"Ram\": 85, \"Carlos\": 92, \"Roman\": 78 }\n",
+    "print(student_scores)\n",
+    "print(type(student_scores))\n",
+    "\n",
+    "# BUT it is less clear."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
    "metadata": {},
    "outputs": [
@@ -68,14 +81,14 @@
     }
    ],
    "source": [
-    "# creating dict: style2\n",
+    "# creating dict from a list: style2\n",
     "l = [\n",
     "    ('Ram',85),\n",
     "    ('Carlos',92),\n",
     "    ('Roman', 78)\n",
     "]\n",
     "\n",
-    "student_scores = dict(l)\n",
+    "student_scores = dict(l) # converts list into a dictionary\n",
     "print(student_scores)\n",
     "print(type(student_scores))"
    ]
@@ -96,12 +109,12 @@
    ],
    "source": [
     "# creating dict: style3 (Using dict with zip()) \n",
-    "names = [\"Ram\", \"Carlos\", \"Roman\"]\n",
-    "scores = [85, 92, 78]\n",
+    "names  = [\"Ram\", \"Carlos\", \"Roman\"] # keys\n",
+    "scores = [85,     92,       78]     # values\n",
     "\n",
     "student_scores = dict(zip(names, scores))\n",
     "\n",
-    "print(student_scores)\n"
+    "print(student_scores)"
    ]
   },
   {
@@ -122,13 +135,17 @@
    "source": [
     "# Accessing values using keys\n",
     "\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "print(student_scores[\"Surendar\"])  # Output: 85\n",
-    "print(student_scores.get(\"Bob\"))  # Output: 92"
+    "# print(student_scores[\"Tom\"])       # ERROR: KeyError \n",
+    "\n",
+    "print(student_scores.get(\"Bob\"))  # Output: 92\n",
+    "print(student_scores.get(\"Tom\"))  # None"
    ]
   },
   {
@@ -148,9 +165,10 @@
    ],
    "source": [
     "# show me all keys\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "keys = student_scores.keys()\n",
@@ -158,8 +176,13 @@
     "\n",
     "#########################\n",
     "# show me all values\n",
-    "keys = student_scores.values()\n",
-    "print(keys)"
+    "values= student_scores.values()\n",
+    "print(values)\n",
+    "\n",
+    "########################\n",
+    "# show me both key,values:\n",
+    "items = student_scores.items()\n",
+    "print(items)"
    ]
   },
   {
@@ -178,24 +201,13 @@
     }
    ],
    "source": [
-    "# show me both key,values:\n",
-    "\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
-    "}\n",
-    "\n",
-    "items = student_scores.items()\n",
-    "print(items)\n",
-    "\n",
-    "#################\n",
     "# show me how many elements there are in dict\n",
     "print(len(student_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ef34a9ab-94f3-4f66-8b9a-a757ef15b5d8",
    "metadata": {},
    "outputs": [
@@ -203,19 +215,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{56: 85, 1.3: 92, 34: 78}\n",
+      "{56: 85, 12: 92, 34: 78}\n",
       "92\n"
      ]
     }
    ],
    "source": [
     "# Side not: Keys can be string, int, float\n",
-    "student_scores = {56: 85, \n",
-    "                  1.3: 92, \n",
-    "                  34: 78\n",
+    "employee = { # keys=employee_id, value=age\n",
+    "    56: 85, \n",
+    "    12: 92, \n",
+    "    34: 78\n",
     "}\n",
-    "print(student_scores)\n",
-    "print(student_scores[1.3])\n"
+    "\n",
+    "print(employee)\n",
+    "print(employee[12])"
    ]
   },
   {
@@ -244,11 +258,13 @@
     }
    ],
    "source": [
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
-    "}\n",
+    "# Add / update entries in dict\n",
     "\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
+    "}\n",
     "\n",
     "print(f\"before adding:{student_scores}\")\n",
     "student_scores[\"David\"] = 88  # Adding new key-value pair\n",
@@ -271,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0bd422bb-8be7-4a10-8d97-d074b9117eaf",
    "metadata": {},
    "outputs": [
@@ -279,23 +295,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The dicionary key:values are Surendar: 85\n",
-      "The dicionary key:values are Bob: 92\n",
-      "The dicionary key:values are Tanner: 78\n",
-      "Done\n"
+      "The dictionary key:values are Surendar: 85\n",
+      "The dictionary key:values are Bob: 92\n",
+      "The dictionary key:values are Tanner: 78\n",
+      "Done\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "# iterate over dictionary\n",
+    "\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "for name, score in student_scores.items():\n",
     "    print(f\"The dictionary key:values are {name}: {score}\")\n",
     "\n",
-    "print(\"Done\")"
+    "print(\"Done\")\n",
+    "\n",
+    "######################\n",
+    "#APPLICATION: count how many students scored > 80\n",
+    "count = 0\n",
+    "for name, score in student_scores.items():\n",
+    "   if score > 80:\n",
+    "       count +=1\n",
+    "print(count)"
    ]
   },
   {
@@ -322,16 +350,19 @@
     }
    ],
    "source": [
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "# check for a key\n",
+    "\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "search = 'Eve' # Tanner\n",
     "if search in student_scores:\n",
     "    print(f\" {search} score is available.\")\n",
     "else:\n",
-    "    print(f\" {search} score is not found.\")\n"
+    "    print(f\" {search} score is not found.\")"
    ]
   },
   {
@@ -358,10 +389,11 @@
     }
    ],
    "source": [
-    "# remove style1\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "# remove an entry based on key:\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "student_scores.pop(\"Bob\")  \n",
@@ -383,10 +415,11 @@
     }
    ],
    "source": [
-    "# remove style2\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "# (SKIP) remove style2\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "del student_scores['Bob']\n",
@@ -408,10 +441,11 @@
     }
    ],
    "source": [
-    "# remove style3: remove all entries\n",
-    "student_scores = {\"Surendar\": 85, \n",
-    "                  \"Bob\": 92,\n",
-    "                  \"Tanner\": 78\n",
+    "# remove all entries\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\": 92,\n",
+    "   \"Tanner\": 78\n",
     "}\n",
     "\n",
     "student_scores.clear()\n",
@@ -481,8 +515,8 @@
     "    \"Happy\" : {'age': 32, 'ht': 1.8, 'location': \"Noida\"}   \n",
     "}\n",
     "\n",
-    "print(students)  # show all elements of dictionary\n",
-    "print(students[\"Happy\"])  # show all values for Happy\n",
+    "print(students)                 # show all elements of dictionary\n",
+    "print(students[\"Happy\"])        # show all values for Happy\n",
     "print(students[\"Happy\"][\"ht\"])  # show me Happy height"
    ]
   },
@@ -505,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "428c8aeb-5b3e-4b1a-8287-9e122f876795",
    "metadata": {},
    "outputs": [
@@ -513,28 +547,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'Bob': 92, 'Charlie': 78, 'David': 88}\n",
-      "{'Alice': 85, 'Bob': 92, 'Charlie': 78, 'David': 88}\n"
+      "{'Archie': 85, 'Bono': 92, 'Charlie': 78, 'David': 88, 'Zena': 54}\n",
+      "{'Archie': 85, 'Bono': 92, 'Charlie': 78, 'David': 88, 'Zena': 54}\n"
      ]
     }
    ],
    "source": [
-    "class_a = {\"Alice\": 85,\n",
-    "           \"Bob\": 92\n",
+    "# merge 2 dict\n",
+    "\n",
+    "class_a = {\"Archie\": 85,\n",
+    "           \"Bono\": 92\n",
     "}\n",
     "\n",
     "class_b = {\"Charlie\": 78, \n",
-    "           \"David\": 88\n",
+    "           \"David\": 88,\n",
+    "           \"Zena\": 54\n",
     "}\n",
     "\n",
     "# Method 1: Using update()\n",
     "merged_scores = class_a.copy()\n",
     "merged_scores.update(class_b)\n",
     "print(merged_scores)\n",
+    "#################################\n",
     "\n",
     "# Method 2: Using `|` operator (Python 3.9+)\n",
     "merged_scores = class_a | class_b\n",
-    "print(merged_scores)\n"
+    "print(merged_scores)"
    ]
   },
   {
@@ -544,6 +582,38 @@
    "source": [
     "# STOP"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4d8400-e3a3-4828-8ee4-a560e8f6702d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b885fdfb-fac1-4e1e-90e0-f3f2cc12c294",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09022e4e-27d1-49bb-b43d-94e566b7f98b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3f8943-6ddc-44bf-894a-7d5f441f34ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -644,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
