--- a/tut_py_3_function_0_2_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_2_userDefined_practice.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your first number: 2\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,15 +158,17 @@
     "\n",
     "# Example usage of calculate_simple_interest\n",
     "principal1 = 1000\n",
-    "rate1 = 0.05\n",
-    "time1 = 2\n",
+    "rate1      = 0.05\n",
+    "time1      = 2\n",
     "interest1 = calculate_simple_interest(principal1, rate1, time1)\n",
+    "print(interest1)\n",
+    "\n",
     "print(f\"The simple interest on ${principal1:.2f} at a rate of {rate1*100:.2f}% for {time1} years is: ${interest1:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +213,8 @@
     "\n",
     "# Example usage of calculate_simple_interest\n",
     "principal1 = 1000 # try -2000\n",
-    "rate1 = 0.05 # try -.02\n",
-    "time1 = 2 # try -1\n",
+    "rate1      = 0.05 # try -.02\n",
+    "time1      = 2 # try -1\n",
     "interest1 = calculate_simple_interest(principal1, rate1, time1)\n",
     "if isinstance(interest1, str):\n",
     "    print(f\"OOPS: {interest1}\")\n",
